--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,20 @@ jobs:
           path: release
           if-no-files-found: error
 
-  release-linux:
+  release:
     runs-on: ubuntu-latest
+    needs:
+      - build-linux-x86_64
+      - build-darwin-arm64
+      - build-windows-x86_64
     steps:
-      - name: Example Output
-        run: |
-          echo ${{ github.ref }}
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v4
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            release-linux-x86_64
+            release-darwin-arm64
+            release-windows-x86_64
