--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,11 +56,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            release-linux-x86_64
-            release-darwin-arm64
-            release-windows-x86_64
+      - run: |
+        ls -lAh
+      #- name: Release
+        #uses: softprops/action-gh-release@v1
+        #if: startsWith(github.ref, 'refs/tags/')
+        #with:
+          #files: |
+            #release-linux-x86_64
+            #release-darwin-arm64
+            #release-windows-x86_64
