--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,12 +58,14 @@ jobs:
       - uses: actions/download-artifact@v4
       - name: Output
         run: |
-          ls -lAh release-*
-      #- name: Release
-        #uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/')
-        #with:
-          #files: |
-            #release-linux-x86_64
-            #release-darwin-arm64
-            #release-windows-x86_64
+          mv release-linux-x86_64/release linux-x86_64
+          mv release-darwin-arm64/release darwin-arm64
+          mv release-windows-x86_64/release windows-x86_64
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            linux-x86_64
+            darwin-arm64
+            windows-x86_64
