--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,17 @@ permissions:
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    branch:
+      description: Branch
 
 jobs:
   build-linux-x86_64:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - name: Build
         run: |
           echo "linux-x86_64" > release
@@ -24,7 +29,9 @@ jobs:
   build-darwin-arm64:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - name: Build
         run: |
           echo "darwin-arm64" > release
@@ -37,7 +44,9 @@ jobs:
   build-windows-x86_64:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - name: Build
         run: |
           "windows-x86_64" | Out-File -FilePath release
